--- a/roles/gitlab-operator/templates/values.yaml.j2
+++ b/roles/gitlab-operator/templates/values.yaml.j2
@@ -1,11 +1,10 @@
 watchCluster: true
 
 image:
-{% if dsc.general.registry is not defined or dsc.general.registry is defined and dsc.general.registry == "" %}
-  registry: registry.gitlab.com
-{% endif %}
 {% if dsc.general.registry %}                                                         
   registry: "{{ dsc.general.registry }}"
+{% else %}
+  registry: registry.gitlab.com
 {% endif %}
   repository: gitlab-org/cloud-native
   name: gitlab-operator
