--- a/roles/harbor/templates/values/10-registry.j2
+++ b/roles/harbor/templates/values/10-registry.j2
@@ -1,47 +1,3 @@
-{% if dsc.general.registry is not defined or dsc.general.registry is defined and dsc.general.registry == "" %}
-nginx:
-  image:
-    repository: docker.io/goharbor/nginx-photon
-
-portal:
-  image:
-    repository: docker.io/goharbor/harbor-portal
-
-core:
-  image:
-    repository: docker.io/goharbor/harbor-core
-
-jobservice:
-  image:
-    repository: docker.io/goharbor/harbor-jobservice
-
-registry:
-  registry:
-    image:
-      repository: docker.io/goharbor/registry-photon
-  controller:
-    image:
-      repository: docker.io/goharbor/harbor-registryctl
-
-trivy:
-  image:
-    repository: docker.io/goharbor/trivy-adapter-photon
-
-database:
-  internal:
-    image:
-      repository: docker.io/goharbor/harbor-db
-
-redis:
-  internal:
-    image:
-      repository: docker.io/goharbor/redis-photon
-
-exporter:
-  image:
-    repository: docker.io/goharbor/harbor-exporter
-{% endif %}
-
 {% if dsc.general.registry %}
 nginx:
   image:
@@ -84,4 +40,46 @@ redis:
 exporter:
   image:
     repository: "{{ dsc.general.registry }}/goharbor/harbor-exporter" 
+{% else %}
+nginx:
+  image:
+    repository: docker.io/goharbor/nginx-photon
+
+portal:
+  image:
+    repository: docker.io/goharbor/harbor-portal
+
+core:
+  image:
+    repository: docker.io/goharbor/harbor-core
+
+jobservice:
+  image:
+    repository: docker.io/goharbor/harbor-jobservice
+
+registry:
+  registry:
+    image:
+      repository: docker.io/goharbor/registry-photon
+  controller:
+    image:
+      repository: docker.io/goharbor/harbor-registryctl
+
+trivy:
+  image:
+    repository: docker.io/goharbor/trivy-adapter-photon
+
+database:
+  internal:
+    image:
+      repository: docker.io/goharbor/harbor-db
+
+redis:
+  internal:
+    image:
+      repository: docker.io/goharbor/redis-photon
+
+exporter:
+  image:
+    repository: docker.io/goharbor/harbor-exporter
 {% endif %}
