--- a/roles/sonarqube/templates/values/00-main.j2
+++ b/roles/sonarqube/templates/values/00-main.j2
@@ -2,6 +2,10 @@
 OpenShift:
   enabled: true
 
+image:
+  pullPolicy: IfNotPresent
+  repository: docker.io/sonarqube
+
 securityContext:
   fsGroup: null
 
